Added password reset functionality

--- a/rwitter/users/templates/users/password_reset_request.html
+++ b/rwitter/users/templates/users/password_reset_request.html
@@ -11,22 +11,14 @@
             {{ form|crispy}}
 
             <div style="display: flex; justify-content: center; align-items: center;">
-                <button class="btn btn-lg btn-primary" type="submit" style="width: 200px;">Login</button>
+                <button class="btn btn-lg btn-primary ml-2" type="submit" style="width: 200px;">Reset</button>
             </div>
+
             <div class="text-center p-3 ">
-                <small class="text-muted"><a href="{% url 'password-reset' %}">Forgot Password?</a></small>
+                <small class="text-muted"><a href="{% url 'user-login' %}">Go to Login instead</a></small>
             </div>
         </fieldset>
     </form>
-
-    <div class="border-top mt-3 pt-2 text-center" >
-        <div class="text-muted pb-2">
-            <small>Don't have an account yet?</small>
-        </div>
-        <div>
-            <a class="btn btn-sm btn-outline-secondary" href="{% url 'user-register' %}"><strong>Sign up here</strong></a>
-        </div>
-    </div>
   
 </div>
 {% endblock content %}
