--- a/rwitter/tweets/templates/tweets/base.html
+++ b/rwitter/tweets/templates/tweets/base.html
@@ -5,101 +5,139 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Twitter Clone - Final</title>
-    <link rel="stylesheet" href="{% static 'tweets/style.css' %}" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-    />
+    {% if title %}
+      <title>Rwitter - {{ title }}</title>
+    {% else %}
+      <title>Rwitter - Make friends and be happy</title> 
+    {% endif %}
+    <title>Rwitter - Make friends and be happy</title>
+    <!--<link rel="stylesheet" href="{% static 'tweets/style.css' %}" /> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
   <body>
     <!-- sidebar starts -->
-    <div class="sidebar">
-      <i class="fab fa-twitter"></i>
-      <div class="sidebarOption active">
-        <span class="material-icons"> home </span>
-        <h2>Home</h2>
-      </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;">
 
-      <div class="sidebarOption">
-        <span class="material-icons"> search </span>
-        <h2>Explore</h2>
-      </div>
+          <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Logo_of_Twitter.svg" alt="logo" height="90" width="90">
+          </a>
 
-      <div class="sidebarOption">
-        <span class="material-icons"> notifications_none </span>
-        <h2>Notifications</h2>
-      </div>
+          <ul >
+            <ul class="nav-item">
+              <a href="#" class="nav-link active" aria-current="page">
+                <span ><i class="bi bi-house-door-fill"></i></span>
+                Home
+              </a>
+            </ul>
 
-      <div class="sidebarOption">
-        <span class="material-icons"> mail_outline </span>
-        <h2>Messages</h2>
-      </div>
 
-      <div class="sidebarOption">
-        <span class="material-icons"> bookmark_border </span>
-        <h2>Bookmarks</h2>
-      </div>
+            <ul class="nav-item">
+              <a href="#" class="nav-link" aria-current="page">
+                <span><i class="bi bi-search"></i></span>
+                Explore
+              </a>
+            </ul>
 
-      <div class="sidebarOption">
-        <span class="material-icons"> list_alt </span>
-        <h2>Lists</h2>
-      </div>
+            <ul class="nav-item">
+              <a href="#" class="nav-link" aria-current="page">
+                <span><i class="bi bi-bell"></i></span>
+                Notifications
+              </a>
+            </ul>
 
-      <div class="sidebarOption">
-        <span class="material-icons"> perm_identity </span>
-        <h2>Profile</h2>
-      </div>
+            <ul class="nav-item">
+              <a href="#" class="nav-link" aria-current="page">
+                <span><i class="bi bi-envelope"></i></span>
+                Messages
+              </a>
+            </ul>
 
-      <div class="sidebarOption">
-        <span class="material-icons"> more_horiz </span>
-        <h2>More</h2>
-      </div>
-      <button class="sidebar__tweet">Tweet</button>
+            <ul class="nav-item">
+              <a href="#" class="nav-link" aria-current="page">
+                <span><i class="bi bi-bookmark"></i></span>
+                Bookmarks
+              </a>
+            </ul>
+
+            <ul class="nav-item">
+              <a href="#" class="nav-link" aria-current="page">
+                <span><i class="bi bi-card-checklist"></i></span>
+                Lists
+              </a>
+            </ul>
+
+            <ul class="nav-item">
+              <a href="#" class="nav-link" aria-current="page">
+                <span><i class="bi bi-person"></i></span>
+                Profile
+              </a>
+            </ul>
+
+            <ul class="nav-item">
+              <a href="#" class="nav-link" aria-current="page">
+                <span><i class="bi bi-three-dots"></i></span>
+                More
+              </a>
+            </ul>
+
+            <div style="display: flex; justify-content: center; align-items: center;">
+              <button class="btn btn-primary btn-lg">Post</button>
+            </div>
+            
+          </ul>
+          </div>
+          <!-- sidebar ends -->
+    <div class="col-sm">
+        {% block content %}
+        {% endblock content %}
     </div>
-    <!-- sidebar ends -->
-
-    <!-- feed starts -->
-    <div class="feed">
-      <div class="feed__header">
-        <h2>Home</h2>
-      </div>
-
-     {% block content %}
-     {% endblock content %}
     <!-- widgets starts -->
+    <div class="col-sm">
     <div class="widgets">
-      <div class="widgets__input">
-        <span class="material-icons widgets__searchIcon"> search </span>
-        <input type="text" placeholder="Search Twitter" />
+
+      <div class="rounded pt-5">
+        <input type="search" class="form-control" placeholder="Search Twitter" aria-label="Search" />
       </div>
 
-      <div class="widgets__widgetContainer">
-        <h2>What's happening?</h2>
-        <blockquote class="twitter-tweet">
-          <p lang="en" dir="ltr">
-            Sunsets don&#39;t get much better than this one over
-            <a href="https://twitter.com/GrandTetonNPS?ref_src=twsrc%5Etfw">@GrandTetonNPS</a>.
-            <a href="https://twitter.com/hashtag/nature?src=hash&amp;ref_src=twsrc%5Etfw"
-              >#nature</a
-            >
-            <a href="https://twitter.com/hashtag/sunset?src=hash&amp;ref_src=twsrc%5Etfw"
-              >#sunset</a
-            >
-            <a href="http://t.co/YuKy2rcjyU">pic.twitter.com/YuKy2rcjyU</a>
-          </p>
-          &mdash; US Department of the Interior (@Interior)
-          <a href="https://twitter.com/Interior/status/463440424141459456?ref_src=twsrc%5Etfw"
-            >May 5, 2014</a
-          >
-        </blockquote>
-        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <div class="container">
+        <h2>Trends for you</h2>
+ 
+        <div class="list-group list-group-flush border-bottom scrollarea">
+
+          <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
+            <div class="d-flex w-100 align-items-center justify-content-between">
+              <strong class="mb-1">Arsenal</strong>
+              <small>245k Posts</small>
+            </div>
+            <div class="col-10 mb-1 small">Football</div>
+          </a>
+
+          <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
+            <div class="d-flex w-100 align-items-center justify-content-between">
+              <strong class="mb-1">Toyota</strong>
+              <small>10k Posts</small>
+            </div>
+            <div class="col-10 mb-1 small">Motors</div>
+          </a>
+
+          <a href="#" class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
+            <div class="d-flex w-100 align-items-center justify-content-between">
+              <strong class="mb-1">Kubernetes</strong>
+              <small>210k Posts</small>
+            </div>
+            <div class="col-10 mb-1 small">Technology</div>
+          </a>
+
+        </div>
       </div>
+
     </div>
+  </div>
+  </div>
+</div>
     <!-- widgets ends -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
