--- a/rwitter/users/templates/users/user_profile.html
+++ b/rwitter/users/templates/users/user_profile.html
@@ -1,39 +1,40 @@
 {% extends 'tweets/base.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
 
-<section class="vh-100" style="background-color: #eee;">
-    <div class="container">
-      <div class="row d-flex justify-content-center align-items-center h-100">  
-          <div class="card" style="border-radius: 15px;">
-            <div class="card-body text-center">
-              <div class="mt-3 mb-4">
-                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"
-                  class="rounded-circle img-fluid" style="width: 100px;" />
-              </div>
-              <h4 class="mb-2">{{ user.first_name }} {{ user.last_name }}</h4>
-              <p class="text-muted mb-4">@{{user.username}} <span class="mx-2">|</span> <a
-                  href="#!">{{ user.email }}</a></p>
-
-              <button type="button" class="btn btn-primary btn-rounded btn-lg">
-                Message now
-              </button>
-              <div class="d-flex justify-content-between text-center mt-5 mb-2">
-                <div>
-                  <p class="mb-2 h5">8471</p>
-                  <p class="text-muted mb-0">Wallets Balance</p>
-                </div>
-                <div class="px-3">
-                  <p class="mb-2 h5">8512</p>
-                  <p class="text-muted mb-0">Income amounts</p>
-                </div>
-                <div>
-                  <p class="mb-2 h5">4751</p>
-                  <p class="text-muted mb-0">Total Transactions</p>
-                </div>
-              </div>
+<!--========Timeline ========-->
+<div class="col-12 col-lg-6">
+  <div class="d-flex flex-column mx-auto justify-content-center w-100 container-fluid overflow-hidden" style="max-width: 680px">
+    <div>
+      <!-- own post 1 -->
+      <div class="bg-white p-4 rounded shadow mt-3">
+        <!-- author -->
+        <div class="d-flex justify-content-between">
+          <div class="media">
+            <img class="object-fit-cover rounded-circle" width="150px" height="150px" alt= "{{user.username}}" src='{{user.userprofile.photo.url}}'>
+            <div class="media-body">
+              <h2 class="account-heading">{{ user.username }}</h2>
+              <p class="text-secondary">{{ user.email }}</p>
             </div>
           </div>
+          <form action="" method="POST" enctype="multipart/form-data"> 
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Profile</legend>
+                {{ user_form|crispy }}
+                {{ profile_form|crispy }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-primary" type="submit">Update</button>
+            </div>
+          </form>
+                  
         </div>
+      </div>
+      <!-- other user post 1 -->
+      <!-- own post 2 -->
     </div>
-  </section>
+  </div>
+</div>
 {% endblock content%}
