Added post section

--- a/rwitter/tweets/templates/tweets/feed.html
+++ b/rwitter/tweets/templates/tweets/feed.html
@@ -122,15 +122,16 @@
     <!--== Posts ==-->
     <div>
       <!-- own post 1 -->
+      {% for post in posts %}
       <div class="bg-white p-4 rounded shadow mt-3">
         <!-- author -->
         <div class="d-flex justify-content-between">
           <!-- avatar -->
           <div class="d-flex">
-            <img src="https://source.unsplash.com/collection/happy-people" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
+            <img src="{{post.user.userprofile.photo.url}}" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
             <div>
-              <p class="m-0 fw-bold">Sajib</p>
-              <span class="text-muted fs-7">March 17 at 1:23 pm</span>
+              <p class="m-0"><span class="fw-bold">{{post.user.first_name}} {{post.user.last_name}}</span> <span class="text-muted">@{{ post.user.username}}</span></p>
+              <span class="text-muted fs-7">{{ post.created_at }}</span>
             </div>
           </div>
           <!-- edit -->
@@ -149,8 +150,8 @@
         <div class="mt-3">
           <!-- content -->
           <div>
-            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae fuga incidunt consequatur tenetur doloremque officia corrupti provident tempore vitae labore? </p>
-            <img src="https://source.unsplash.com/random/12" alt="post image" class="w-100 rounded" style="max-height: 400px; object-fit: cover" />
+            <p>  {{post.content }} </p>
+            <img src="{{post.user.userprofile.photo.url}}" alt="post image" class="w-100 rounded" style="max-height: 400px; object-fit: cover" />
           </div>
           <!-- likes & comments -->
           <div class="mt-3 position-relative">
@@ -240,115 +241,8 @@
           </div>
         </div>
       </div>
-      <!-- other user post 1 -->
-      <div class="bg-white p-4 rounded shadow mt-3">
-        <!-- author -->
-        <div class="d-flex justify-content-between">
-          <!-- avatar -->
-          <div class="d-flex">
-            <img src="https://source.unsplash.com/random/7" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-            <div>
-              <p class="m-0 fw-bold">Stone</p>
-              <span class="text-muted fs-7">Jan 17 at 1:23 pm</span>
-            </div>
-          </div>
-        </div>
-        <!-- post content -->
-        <div class="mt-3">
-          <!-- content -->
-          <div>
-            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae fuga incidunt consequatur tenetur doloremque officia corrupti provident tempore vitae labore? </p>
-            <img src="https://source.unsplash.com/random/13" alt="post image" class="w-100 rounded" style="max-height: 400px; object-fit: cover" />
-          </div>
-          <!-- likes & comments -->
-          <div class="post__comment mt-3 position-relative">
-            <!-- likes -->
-            <div class="d-flex align-items-center top-0 start-0 position-absolute" style="height: 50px; z-index: 5">
-              <div class="me-2">
-                <i class="text-primary fas fa-thumbs-up"></i>
-                <i class="text-danger fab fa-gratipay"></i>
-                <i class="text-warning fas fa-grin-squint"></i>
-              </div>
-              <p class="m-0 text-muted fs-7">sajib, mehedi, and 3 others</p>
-            </div>
-            <!-- comments start-->
-            <div class="accordion" id="accordionExample2">
-              <div class="accordion-item border-0">
-                <!-- comment collapse -->
-                <h2 class="accordion-header" id="headingThree">
-                  <div class="accordion-button collapsed pointer d-flex justify-content-end" data-bs-toggle="collapse" data-bs-target="#collapsePost2" aria-expanded="false" aria-controls="collapsePost2">
-                    <p class="m-0 d-none d-lg-block">2 Comments</p>
-                  </div>
-                </h2>
-                <hr />
-                <!-- comment & like bar -->
-                <div class="d-flex justify-content-around">
-                  <div class="dropdown-item rounded d-flex justify-content-center align-items-center pointer text-muted p-1">
-                    <i class="fas fa-thumbs-up me-3"></i>
-                    <p class="m-0">Like</p>
-                  </div>
-                  <div class="dropdown-item rounded d-flex justify-content-center align-items-center pointer text-muted p-1" data-bs-toggle="collapse" data-bs-target="#collapsePost2" aria-expanded="false" aria-controls="collapsePost2">
-                    <i class="fas fa-comment-alt me-3"></i>
-                    <p class="m-0">Comment</p>
-                  </div>
-                </div>
-                <!-- comment expand -->
-                <div id="collapsePost2" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample2">
-                  <hr />
-                  <div class="accordion-body">
-                    <!-- comment 1 -->
-                    <div class="d-flex align-items-center my-1">
-                      <!-- avatar -->
-                      <img src="https://source.unsplash.com/collection/happy-people" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-                      <!-- comment text -->
-                      <div class="p-3 rounded comment__input w-100">
-                        <!-- comment menu of author -->
-                        <div class="d-flex justify-content-end">
-                          <!-- icon -->
-                          <i class="fas fa-ellipsis-h text-blue pointer" id="post2CommentMenuButton" data-bs-toggle="dropdown" aria-expanded="false"></i>
-                          <!-- menu -->
-                          <ul class="dropdown-menu border-0 shadow" aria-labelledby="post2CommentMenuButton">
-                            <li class="d-flex align-items-center">
-                              <a class="dropdown-item d-flex justify-content-around align-items-center fs-7" href="#"> Edit Comment</a>
-                            </li>
-                            <li class="d-flex align-items-center">
-                              <a class="dropdown-item d-flex justify-content-around align-items-center fs-7" href="#"> Delete Comment</a>
-                            </li>
-                          </ul>
-                        </div>
-                        <p class="fw-bold m-0">John</p>
-                        <p class="m-0 fs-7 bg-gray p-2 rounded"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                      </div>
-                    </div>
-                    <!-- comment 2 -->
-                    <div class="d-flex align-items-center my-1">
-                      <!-- avatar -->
-                      <img src="https://source.unsplash.com/random/2" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-                      <!-- comment text -->
-                      <div class="p-3 rounded comment__input w-100">
-                        <p class="fw-bold m-0">Jerry</p>
-                        <p class="m-0 fs-7 bg-gray p-2 rounded"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
-                      </div>
-                    </div>
-                    <!-- create comment -->
-                    <form class="d-flex my-1">
-                      <!-- avatar -->
-                      <div>
-                        <img src="https://source.unsplash.com/collection/happy-people" alt="avatar" class="rounded-circle me-2" style="width: 38px; height: 38px; object-fit: cover" />
-                      </div>
-                      <!-- input -->
-                      <input type="text" class="form-control border-0 rounded-pill bg-gray" placeholder="Write a comment" />
-                    </form>
-                    <!-- end -->
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- end -->
-          </div>
-        </div>
-      </div>
-      <!-- own post 2 -->
+      {% endfor %}
+
     </div>
   </div>
 </div>
