Added the add, update and delete post functionalities

--- a/rwitter/tweets/templates/tweets/base.html
+++ b/rwitter/tweets/templates/tweets/base.html
@@ -903,7 +903,7 @@
                   </li>
                   <!-- logout -->
                   <li class="my-3">
-                    <a href="./index.html" class="dropdown-item d-flex align-items-center">
+                    <a href="/u/logout" class="dropdown-item d-flex align-items-center">
                       <i class="fa-solid fa-cog me-3"></i>
                       <p class="my-auto">Log Out</p>
                     </a>
@@ -1111,65 +1111,6 @@
                 <h3 class="text-white">Schedule A Room For Later</h3>
                 <p class="text-white text-center w-50 mx-auto"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut deserunt alias laudantium itaque eius enim natus culpa eligendi consectetur maiores! </p>
                 <button class="btn btn-lg btn-primary rounded-pill"> Schedule Room </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!--==== Create post Modal ====-->
-        <div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true" data-bs-backdrop="false">
-          <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-              <!-- head -->
-              <div class="modal-header align-items-center">
-                <h5 class="text-dark text-center w-100 m-0" id="exampleModalLabel"> Create Post </h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <!-- body -->
-              <div class="modal-body">
-                <div class="my-1 p-1">
-                  <div class="d-flex flex-column">
-                    <!-- name -->
-                    <div class="d-flex align-items-center">
-                      <div class="p-2">
-                        <img src="https://source.unsplash.com/collection/happy-people" alt="from fb" class="rounded-circle" style="width: 38px; height: 38px; object-fit: cover" />
-                      </div>
-                      <div>
-                        <p class="m-0 fw-bold ps-1">Sajib</p>
-                        <select class="form-select border-0 bg-gray fs-7" aria-label="Default select example">
-                          <option selected value="1">Public</option>
-                          <option value="2">Pin To Top</option>
-                          <option value="3">Hide</option>
-                        </select>
-                      </div>
-                    </div>
-                    <!-- text -->
-                    <div class="my-2">
-                      <textarea cols="30" rows="5" class="form-control border-grey"></textarea>
-                    </div>
-                    <!-- emoji  -->
-                    <div class="d-flex justify-content-between align-items-center">
-                      <img src="https://www.facebook.com/images/composer/SATP_Aa_square-2x.png" class="pointer" alt="fb text" style="width: 30px; height: 30px; object-fit: cover" />
-                      <i class="far fa-laugh-wink fs-5 text-muted pointer"></i>
-                    </div>
-                    <!-- options -->
-                    <div class="d-flex justify-content-between border border-1 border-light rounded p-3 mt-3">
-                      <p class="m-0">Add to your post</p>
-                      <div>
-                        <i class="fas fa-images fs-5 text-success pointer mx-1"></i>
-                        <i class="fas fa-user-check fs-5 text-primary pointer mx-1"></i>
-                        <i class="far fa-smile fs-5 text-warning pointer mx-1"></i>
-                        <i class="fas fa-map-marker-alt fs-5 text-info pointer mx-1"></i>
-                        <i class="fas fa-microphone fs-5 text-danger pointer mx-1"></i>
-                        <i class="fas fa-ellipsis-h fs-5 text-muted pointer mx-1"></i>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- end -->
-              </div>
-              <!-- footer -->
-              <div class="modal-footer">
-                <button type="button" class="btn btn-primary w-100"> Post </button>
               </div>
             </div>
           </div>
