--- a/rwitter/tweets/templates/tweets/feed.html
+++ b/rwitter/tweets/templates/tweets/feed.html
@@ -1,4 +1,5 @@
 {% extends 'tweets/base.html' %}
+{% load crispy_forms_tags %}
 {% block content%}
 <!--========Timeline ========-->
 <div class="col-12 col-lg-6">
@@ -45,7 +46,8 @@
       <!-- avatar -->
       <div class="d-flex" type="button">
         <img src="https://source.unsplash.com/collection/happy-people" alt="avatar" class="object-fit-cover rounded-circle me-2" style="width: 38px; height: 38px" />
-        <input type="text" class="form-control mx-1 rounded-pill bg-grey border-0 py-2" placeholder="What's on your mind, Sajib?" disabled data-bs-toggle="modal" data-bs-target="#createModal" />
+        <!-- <input type="text" class="form-control mx-1 rounded-pill bg-grey border-0 py-2" placeholder="What's on your mind, {{user.first_name}}?" disabled data-bs-toggle="modal" data-bs-target="#createModal" /> -->
+        <a class="btn btn-outline-info" href="{% url 'post-create' %}">Create a Post</a>
       </div>
       <hr />
       <!-- action -->
@@ -135,16 +137,22 @@
             </div>
           </div>
           <!-- edit -->
+          {% if user.is_authenticated and post.user.username == user.username %}
           <i class="fas fa-ellipsis-h" type="button" id="post1Menu" data-bs-toggle="dropdown" aria-expanded="false"></i>
           <!-- edit menu -->
           <ul class="dropdown-menu border-0 shadow" aria-labelledby="post1Menu">
             <li class="d-flex align-items-center">
-              <a class="dropdown-item d-flex justify-content-around align-items-center fs-7" href="#"> Edit Post</a>
+              <a class="dropdown-item d-flex justify-content-around align-items-center fs-7" href="{% url 'post-update' post.id %}">
+                <i class="fa fa-edit" aria-hidden="true"></i>Update
+              </a>
             </li>
             <li class="d-flex align-items-center">
-              <a class="dropdown-item d-flex justify-content-around align-items-center fs-7" href="#"> Delete Post</a>
+              <a class="dropdown-item d-flex justify-content-around align-items-center fs-7 btn btn-danger" href="{% url 'post-delete' post.id%}"> 
+                <i class="fa fa-trash" aria-hidden="true"></i>Delete
+              </a>
             </li>
           </ul>
+          {% endif %}
         </div>
         <!-- post content -->
         <div class="mt-3">
@@ -242,8 +250,56 @@
         </div>
       </div>
       {% endfor %}
-
     </div>
   </div>
 </div>
+
+
+<!--==== Create post Modal ====-->
+<div class="modal fade" id="createModal" tabindex="-1" aria-labelledby="createModalLabel" aria-hidden="true" data-bs-backdrop="false">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <!-- head -->
+      <div class="modal-header align-items-center">
+        <h5 class="text-dark text-center w-100 m-0" id="exampleModalLabel"> Create Post </h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <!-- body -->
+      <div class="modal-body">
+        <div class="my-1 p-1">
+          <div class="d-flex flex-column">
+            <form action="" method="POST">
+              {% csrf_token %}
+              {{ form|crispy }}
+              <!-- emoji  -->
+              <div class="d-flex justify-content-between align-items-center">
+                <img src="https://www.facebook.com/images/composer/SATP_Aa_square-2x.png" class="pointer" alt="fb text" style="width: 30px; height: 30px; object-fit: cover" />
+                <i class="far fa-laugh-wink fs-5 text-muted pointer"></i>
+              </div>
+              <!-- options -->
+              <div class="d-flex justify-content-between border border-1 border-light rounded p-3 mt-3">
+                <p class="m-0">Add to your post</p>
+                <div>
+                  <i class="fas fa-images fs-5 text-success pointer mx-1"></i>
+                  <i class="fas fa-user-check fs-5 text-primary pointer mx-1"></i>
+                  <i class="far fa-smile fs-5 text-warning pointer mx-1"></i>
+                  <i class="fas fa-map-marker-alt fs-5 text-info pointer mx-1"></i>
+                  <i class="fas fa-microphone fs-5 text-danger pointer mx-1"></i>
+                  <i class="fas fa-ellipsis-h fs-5 text-muted pointer mx-1"></i>
+                </div>
+              </div>
+                <!-- footer -->
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-primary w-100"> Post </button>
+              </div>
+            </form>
+          </div>
+        </div>
+        <!-- end -->
+      </div>
+              
+    </div>
+  </div>
+</div>
+
 {% endblock content%}
